@@ -1,6 +1,7 @@
 2010-03-29  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_lrc_fetch_minilyrics.c (ol_lrc_fetch_minilyrics_download): FIX: Detect encoding of downloaded lyrics.
+	FIX: Decode XML special characters in search results
 
 	* src/ol_lrc.c (_init_lrc): FIX: Initialize offset of LRC Parser.
 
